--- a/css/comm.css
+++ b/css/comm.css
@@ -1,4 +1,4 @@
-/* 提示弹框开始 */
+ /* 提示弹框开始 */
 .toast-content .fade{
     background:none;
 }
@@ -25,8 +25,6 @@
 /* 提示弹框结束 */
 /* 适合门店页面开始 */
 .bodyBg{
-    width: 100wh;
-    height: 100vh;
     background: -webkit-linear-gradient(#afceb8, #fff); /* Safari 5.1 - 6.0 */
     background: -o-linear-gradient(#afceb8, #fff); /* Opera 11.1 - 12.0 */
     background: -moz-linear-gradient(#afceb8, #fff); /* Firefox 3.6 - 15 */
@@ -100,7 +98,6 @@
     font-weight: 700;
 }
 .inAll{
-    margin-bottom: .25rem;
     width: 100%;
     padding-left: .31rem;
     height: .35rem;
@@ -109,6 +106,10 @@
     color: rgba(0, 0, 0, 0.8);
     font-size: .18rem;
     background-color: #eeeeee;
+}
+.fitMain img{
+    width: 100%;
+    height: 100%;
 }
 .main{
     margin-left: .31rem;
@@ -208,7 +209,7 @@
     display: flex;
     font-size: .18rem;
     color: rgba(255, 255, 255, 0.3);
-    margin-top: 1.23rem;
+    padding-top: 1.23rem;
     margin-left: 3.5rem;
 }
 .isHy .Hy{
@@ -233,14 +234,29 @@
     width: 3.51rem;
     height: .53rem;
 }
+.imgBottom{
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -888;
+    width: 100%;
+}
+.bgBodys{
+    position: relative;
+    min-height:100vh;
+    background:url(../assets/images/bgbgbg.jpg) no-repeat;
+    background-size: 100%;
+}
 .inputAlert{
     width: 4.1rem;
     background-color: rgba(255, 255, 255, 0.87);
     border-radius: .3rem;
     border: solid 2px rgba(0, 0, 0, 0.87);
     margin: 0 auto;
-    margin-bottom: .67rem;
+    margin-bottom: .3rem;
     padding: 0 .24rem .5rem;
+    position: relative;
 }
 .inputAlert .title{
     font-size: .3rem;
@@ -291,7 +307,6 @@
     line-height: 21px;
     letter-spacing: 1px;
     color: #000000;
-    margin-bottom: 1.64rem;
 }
 .btnFind .btnText{
     color: #ff0000;
