--- a/css/comm.css
+++ b/css/comm.css
@@ -106,6 +106,10 @@
     font-size: .18rem;
     background-color: #eeeeee;
 }
+.fitMain{
+    padding: .2rem 0;
+    background: #fff;
+}
 .fitMain img{
     width: 100%;
     height: 100%;
