最后修改完版本

--- a/css/comm.css
+++ b/css/comm.css
@@ -267,7 +267,7 @@
     color: #000000;
     margin-top: .71rem;
 }
-.inputAlert .state{
+.inputAlert .content_t{
     margin-top: .36rem;
     font-size: .24rem;
     letter-spacing: 1px;
